[tool.poetry]
name = "stasproject"
version = "0.1.0"
description = ""
authors = ["Sorokin Vadym <s57111702@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.4"
pyjwt = "^2.6.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
